--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,18 +1,23 @@
 {
+    "include": [
+        "vite.config.*",
+        "env.d.js",
+        "shims.d.ts",
+        "src/**/*",
+        "src/**/*.vue",
+        "themeConfig.ts"
+    ],
+    "exclude": [
+        "dist",
+        "node_modules",
+        "src/@iconify/*"
+    ],
     "compilerOptions": {
         "baseUrl": "./",
         "target": "esnext",
-        "useDefineForClassFields": true,
         "module": "esnext",
         "moduleResolution": "node",
-        "isolatedModules": true,
-        "strict": true,
         "jsx": "preserve",
-        "jsxFactory": "h",
-        "jsxFragmentFactory": "Fragment",
-        "sourceMap": false,
-        "resolveJsonModule": true,
-        "esModuleInterop": true,
         "paths": {
             "@/*": [
                 "src/*"
@@ -33,30 +38,10 @@
                 "src/plugins/axios"
             ]
         },
-        "lib": [
-            "esnext",
-            "dom",
-            "dom.iterable",
-            "scripthost"
-        ],
-        "skipLibCheck": true,
         "types": [
             "vite/client",
             "vite-plugin-pages/client",
             "vite-plugin-vue-layouts/client"
         ]
-    },
-    "include": [
-        "vite.config.*",
-        "env.d.ts",
-        "shims.d.ts",
-        "src/**/*",
-        "src/**/*.vue",
-        "themeConfig.ts"
-    ],
-    "exclude": [
-        "dist",
-        "node_modules",
-        "src/@iconify/*"
-    ]
+    }
 }
